# hacker_news_comments

./: .gitignore  README.md  fetch_data.py  pyproject.toml
hacker_news_comments/: dbt_project.yml
hacker_news_comments/models/: hacker_news_comments.yml  hacker_news_formatted.sql  hacker_news_subset.sql  sources.yml
hacker_news_comments/tests/: assert_every_comment_has_valid_parent.sql  assert_parent_timestamp.sql  assert_parent_title_and_text.sql  assert_positive_comment_ranking.sql
