[tool.poetry]
name = "hacker_news_comments"
version = "0.1.0"
description = ""
authors = ["Felipe A. Costa <felipeagc2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.7"
dbt-duckdb = "^1.8.4"
polars = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
